[project]
name = "agentic-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorlog>=6.9.0",
    "diffusers>=0.33.1",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "google-search-results>=2.4.2",
    "google-serp-api>=1.0.5",
    "ipykernel>=6.29.5",
    "jq>=1.8.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-openai>=0.3.16",
    "langchain-tavily>=0.1.6",
    "langgraph>=0.4.3",
    "nest-asyncio>=1.6.0",
    "openai>=1.77.0",
    "pillow>=11.2.1",
    "pydantic>=2.11.4",
    "pyppeteer>=2.0.0",
    "pytrends>=4.9.2",
    "serpapi>=0.1.5",
    "tavily-python>=0.7.2",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
